--- a/src/pkgfinal/Tablero.form
+++ b/src/pkgfinal/Tablero.form
@@ -234,6 +234,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Aplicar Objeto"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="10" y="50" width="170" height="-1"/>
